--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -81,7 +81,7 @@
 
   &__note {
     font-size: 0.8rem;
-    color: $color-gray;
+    color: var(--text-color);
     margin-top: 1rem;
   }
 
